Fix chart titles not showing in DataExplorer

--- a/client/src/assets/styles/DataExplorer.css
+++ b/client/src/assets/styles/DataExplorer.css
@@ -168,12 +168,13 @@ h3 {
 .chart-container > .chart-wrapper {
 	border: 3px solid #27407e50;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-}
-
-.chart-container .chart-wrapper{
   width: 100%;
   min-height: 40vh;
   max-height: 40vh;
+}
+
+.chart-container > .chart-wrapper > h2 {
+  color: #213547;
 }
 
 /* === City Info === */
